fix: minor fix for useless code & deal with too long string on frontend

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,6 +18,12 @@
   font-size: 1.3em;
 }
 
+.info-text{
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .info-row{
    background-color: white; 
    border:darkgrey"
